--- a/index.html
+++ b/index.html
@@ -31,10 +31,26 @@
         right: 1rem;
         text-decoration: none;
       }
+      svg {
+        transform: scale(1.05)
+      }
+      hr {
+        border: 0;
+      }
+
       .eightball {
         width: 300px;
         height: 300px;
         background-color: black;
+      }
+      .flexcenter {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 300px;
+      }
+      .center {
+        text-align: center;
       }
       @keyframes fadeOut {
         to {
@@ -72,16 +88,19 @@
         font-weight: bold;
         text-align: center;
       }
-      .flexcenter {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 300px;
+      #ios-add-to-homescreen-popup {
+        display: none;
+        position: fixed;
+        bottom: 1rem;
+        background-color: #eee;
+        border-radius: 1rem;
+        padding: 1rem;
+        max-width: 100%;
+      }
+      #ios-add-to-homescreen-popup .close {
+        float: right;
       }
 
-      svg {
-        transform: scale(1.05)
-      }
 
     </style>
   </head>
@@ -101,84 +120,6 @@
     </div>
     <!-- <p style="font-weight:bold;padding: 18px;">Think of your question and shake the magic 8-ball</p> -->
 
-    <script type="text/javascript">
-      var movementsCounter = 0,
-          shaking = false,
-          shaken = false,
-          shakeTimeout
-
-      function getMovementTotal(a) {
-        return Math.abs(a.x) + Math.abs(a.y) + Math.abs(a.z)
-      }
-
-      function getAnswer() {
-        var responses = [
-          "It is certain",
-          "It is decidedly so",
-          "Without a doubt",
-          "Yes, definitely",
-          "You may rely on it",
-          "As I see it, yes",
-          "Most likely",
-          "Outlook good",
-          "Yes",
-          "Signs point to yes",
-          "Reply hazy try again",
-          "Ask again later",
-          "Better not tell you now",
-          "Cannot predict now",
-          "Concentrate and ask again",
-          "Don't count on it",
-          "My reply is no",
-          "My sources say no",
-          "Outlook not so good",
-          "Very doubtful"
-        ]
-        return responses[Math.round(Math.random() * responses.length)]
-      }
-
-      function showAnswer() {
-        answer.style = "opacity: 1"
-        answerText.innerText = getAnswer()
-      }
-
-      window.addEventListener('devicemotion', e => {
-        window.requestAnimationFrame(()=>{
-          let movementTotal = getMovementTotal(e.acceleration)
-
-          if(movementTotal > 7) {
-            movementsCounter++
-            if(movementsCounter > 20) {
-              shaking = true
-              answer.style = "opacity: 0"
-              clearTimeout(shakeTimeout) // Prevents multiple answers
-              shakeTimeout = setTimeout(() => {
-                shaken = true
-              }, 1000)
-            }
-          }
-          else if(movementTotal < 7) {
-            if(shaken === true) {
-              showAnswer()
-              shaking = false
-              shaken = false
-            }
-            movementsCounter = 0
-          }
-        })
-      })
-
-      numbereight.addEventListener('animationend', ()=>{
-        numbereight.style = "opacity: 0;display: none"
-        answer.style = ""
-        window.requestAnimationFrame(()=> {
-          answer.style = "opacity: 1"
-        })
-      })
-      console.log(window.ondevicemotion)
-
-    </script>
-
     <hr/>
 
     <section id="info">
@@ -190,7 +131,101 @@
       <script type="text/javascript">
         // document.write(window.ondevicemotion)
       </script>
-  </section>
+    </section>
 
+    <aside id="ios-add-to-homescreen-popup" class="center">
+      <!-- <span class="close">✖️</span> -->
+      Add this webapp to your homescreen<br/>
+      ⬇️
+    </aside>
+
+    <script type="text/javascript">
+      $ = (s) => document.querySelector(s)
+      const magic8BallInit = () => {
+        var movementsCounter = 0,
+            shaking = false,
+            shaken = false,
+            shakeTimeout
+
+        function getMovementTotal(a) {
+          return Math.abs(a.x) + Math.abs(a.y) + Math.abs(a.z)
+        }
+
+        function getAnswer() {
+          var responses = [
+            "It is certain",
+            "It is decidedly so",
+            "Without a doubt",
+            "Yes, definitely",
+            "You may rely on it",
+            "As I see it, yes",
+            "Most likely",
+            "Outlook good",
+            "Yes",
+            "Signs point to yes",
+            "Reply hazy try again",
+            "Ask again later",
+            "Better not tell you now",
+            "Cannot predict now",
+            "Concentrate and ask again",
+            "Don't count on it",
+            "My reply is no",
+            "My sources say no",
+            "Outlook not so good",
+            "Very doubtful"
+          ]
+          return responses[Math.round(Math.random() * responses.length)]
+        }
+
+        function showAnswer() {
+          answer.style = "opacity: 1"
+          answerText.innerText = getAnswer()
+        }
+
+        window.addEventListener('devicemotion', e => {
+          window.requestAnimationFrame(()=>{
+            let movementTotal = getMovementTotal(e.acceleration)
+
+            if(movementTotal > 7) {
+              movementsCounter++
+              if(movementsCounter > 20) {
+                shaking = true
+                answer.style = "opacity: 0"
+                clearTimeout(shakeTimeout) // Prevents multiple answers
+                shakeTimeout = setTimeout(() => {
+                  shaken = true
+                }, 1000)
+              }
+            }
+            else if(movementTotal < 7) {
+              if(shaken === true) {
+                showAnswer()
+                shaking = false
+                shaken = false
+              }
+              movementsCounter = 0
+            }
+          })
+        })
+
+        numbereight.addEventListener('animationend', ()=>{
+          numbereight.style = "opacity: 0;display: none"
+          answer.style = ""
+          window.requestAnimationFrame(()=> {
+            answer.style = "opacity: 1"
+          })
+        })
+      }
+      magic8BallInit();
+
+      const iOSPopup = () => {
+        if(window.navigator.userAgent.match(/iPhone|iPad/) && ! window.navigator.standalone) {
+          const popup = $('#ios-add-to-homescreen-popup')
+          popup.style.display = "block"
+          popup.onclick = (e) => e.currentTarget.style.display = 'none'
+        }
+      }
+      iOSPopup()
+    </script>
   </body>
 </html>
