--- a/index.html
+++ b/index.html
@@ -8,104 +8,24 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="transparent">
     <meta name="apple-mobile-web-app-title" content="Magic 8-Ball">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://mevanloon.github.io/magic-8-ball/apple-touch-icon.png">
-    <style media="screen">
-      body {
-        margin:0;
-        font-family: sans-serif;
-        min-height: 80vh;
-        flex-flow: column;
-      }
-      section {
-        position: absolute;
-        top: calc(100vh);
-        padding: 0 1rem;
-      }
-      img {
-        max-width: 100%;
-        heigth: auto;
-      }
-      body h2 a {
-        position: absolute;
-        top: 1rem;
-        right: 1rem;
-        text-decoration: none;
-      }
-      svg {
-        transform: scale(1.05)
-      }
-      hr {
-        border: 0;
-      }
-
-      .eightball {
-        width: 300px;
-        height: 300px;
-        background-color: black;
-      }
-      .flexcenter {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 300px;
-      }
-      .center {
-        text-align: center;
-      }
-      #numbereight {
-        width: 120px;
-        height: 120px;
-        background-color: white;
-        font-size: 50px;
-        font-weight: bold;
-        transition: all .5s ease-out;
-      }
-      #answer {
-        opacity: 0;
-
-        position: relative;
-        width: 150px;
-        height: 150px;
-        background-color: #111;
-        border: 1px solid #1c1c1c;
-        transition: opacity 1s ease-out;
-        color: white;
-        overflow: hidden;
-      }
-      #answerText {
-        position: absolute;
-        z-index: 3;
-        top: 50%;
-        left: 40px;
-        width: 73px;
-        transform: translateY(-50%);
-        /* height: 76px; */
-        font-weight: bold;
-        text-align: center;
-      }
-      #ios-add-to-homescreen-popup {
-        display: none;
-        position: fixed;
-        bottom: 1rem;
-        background-color: #eee;
-        border-radius: 1rem;
-        padding: 1rem;
-        max-width: 100%;
-      }
-      #ios-add-to-homescreen-popup .close {
-        float: right;
-      }
-
-    </style>
+    <link rel="apple-touch-icon" sizes="512x512" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body class="flexcenter">
-    <h2><a href="#info">ℹ</a></h2>
+    <label for="info-checkbox"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="32" height="32"><path d="M288 352h-24.02l.0098-135.1c0-.0176 0 .0176 0 0C263.1 211.6 260.4 208 256 208H224c-4.406 0-8 3.594-8 8S219.6 224 224 224h23.98v128H224c-4.406 0-8 3.594-8 8S219.6 368 224 368h64c4.406 0 8-3.594 8-8S292.4 352 288 352zM255.9 176c8.822 0 16-7.178 16-16s-7.178-16-16-16s-16 7.178-16 16S247.1 176 255.9 176zM256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 496c-132.3 0-240-107.7-240-240S123.7 16 256 16s240 107.7 240 240S388.3 496 256 496z"/></svg></label>
+    <input type="checkbox" id="info-checkbox" />
+    <div class="info-overlay">
+      <ul>
+        <li><a href="//ko-fi.com/megamatt">☕️ 24/7 ko fi buttons to donate with </a></li>
+        <li><a href="//twitter.com/matthijsewoud">🐦 By @matthijsewoud</a></li>
+      </ul>
+    </div>
 
     <p class="prompt">(Tap the <i>8</i> to start)</p>
 
-    <div class="eightball flexcenter">
+    <div id="eightball" class="eightball flexcenter">
       <div id="numbereight" class="flexcenter">8</div>
-      <div id="answer" class="flexcenter" style="display: none;">
+      <div id="answer" class="flexcenter">
         <svg height="150px" width="150px">
           <polygon fill="#00D" points="0,150 150,150 75,0" transform="translate(0,-25)"/>
         </svg>
@@ -115,6 +35,7 @@
       </div>
     </div>
     <!-- <p style="font-weight:bold;padding: 18px;">Think of your question and shake the magic 8-ball</p> -->
+    <p id="debug"></p>
 
     <hr/>
 
@@ -123,114 +44,11 @@
     </section>
 
     <aside id="ios-add-to-homescreen-popup" class="center">
-      <!-- <span class="close">✖️</span> -->
       Add this webapp to your homescreen<br/>
       ⬇️
+      <span class="close" style="float:right">✖️</span>
     </aside>
 
-    <script type="text/javascript">
-      $ = (s) => document.querySelector(s)
-      const magic8BallInit = () => {
-        var movementsCounter = 0,
-            shaking = false,
-            shaken = false,
-            shakeTimeout
-
-        function getMovementTotal(a) {
-          return Math.abs(a.x) + Math.abs(a.y)
-        }
-
-        function getAnswer() {
-          var responses = [
-            "It is certain",
-            "It is decidedly so",
-            "Without a doubt",
-            "Yes, definitely",
-            "You may rely on it",
-            "As I see it, yes",
-            "Most likely",
-            "Outlook good",
-            "Yes",
-            "Signs point to yes",
-            "Reply hazy try again",
-            "Ask again later",
-            "Better not tell you now",
-            "Cannot predict now",
-            "Concentrate and ask again",
-            "Don't count on it",
-            "My reply is no",
-            "My sources say no",
-            "Outlook not so good",
-            "Very doubtful"
-          ]
-          return responses[Math.round(Math.random() * responses.length)]
-        }
-
-        function showAnswer() {
-          answer.style = "opacity: 1"
-          answerText.innerText = getAnswer()
-        }
-
-        const handleMotion = e => {
-          window.requestAnimationFrame(()=>{
-            let movementTotal = getMovementTotal(e.acceleration || e.accelerationIncludingGravity)
-
-            if(movementTotal > 18) {
-              movementsCounter++
-              if(movementsCounter > 20) {
-                shaking = true
-                answer.style = "opacity: 0"
-                clearTimeout(shakeTimeout) // Prevents multiple answers
-                shakeTimeout = setTimeout(() => {
-                  shaken = true
-                }, 1000)
-                numbereight.style = "opacity: 0;display: none"
-              }
-            }
-            else if(movementTotal < 7) {
-              if(shaken === true) {
-                showAnswer()
-                shaking = false
-                shaken = false
-              }
-              movementsCounter = 0
-            }
-          })
-        }
-        window.addEventListener('devicemotion', handleMotion)
-
-        numbereight.addEventListener('click', ()=>{
-          if(typeof DeviceOrientationEvent !== 'undefined' && window.DeviceMotionEvent) {
-            DeviceMotionEvent.requestPermission()
-            .then(response => {
-              if(response == 'granted') {
-                window.addEventListener('devicemotion', handleMotion)
-              }
-            })
-          }
-          else {
-
-          }
-          numbereight.style = "opacity: 0;display: none"
-          answer.style = "opacity: 1"
-          document.querySelector('.prompt').style = 'display: none'
-
-
-          window.requestAnimationFrame(()=> {
-            answer.style = "opacity: 1"
-          })
-        })
-      }
-      magic8BallInit();
-
-      const iOSPopup = () => {
-        if(window.navigator.userAgent.match(/iPhone|iPad/) && ! window.navigator.standalone) {
-          const popup = $('#ios-add-to-homescreen-popup')
-          popup.style.display = "block"
-          popup.onclick = (e) => e.currentTarget.style.display = 'none'
-        }
-      }
-      iOSPopup()
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
