--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="apple-touch-icon.png">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body class="flexcenter">
+  <body>
     <label for="info-checkbox"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="32" height="32"><path d="M288 352h-24.02l.0098-135.1c0-.0176 0 .0176 0 0C263.1 211.6 260.4 208 256 208H224c-4.406 0-8 3.594-8 8S219.6 224 224 224h23.98v128H224c-4.406 0-8 3.594-8 8S219.6 368 224 368h64c4.406 0 8-3.594 8-8S292.4 352 288 352zM255.9 176c8.822 0 16-7.178 16-16s-7.178-16-16-16s-16 7.178-16 16S247.1 176 255.9 176zM256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 496c-132.3 0-240-107.7-240-240S123.7 16 256 16s240 107.7 240 240S388.3 496 256 496z"/></svg></label>
     <input type="checkbox" id="info-checkbox" />
     <div class="info-overlay">
@@ -21,7 +21,7 @@
       </ul>
     </div>
 
-    <p class="prompt">(Tap the <i>8</i> to start)</p>
+    <center class="prompt">(Tap the <i>8</i> to start)</center>
 
     <div id="eightball" class="eightball flexcenter">
       <div id="numbereight" class="flexcenter">8</div>
